Putting all funtions together

--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -781,6 +781,505 @@
     "result = even_or_odd(num)\n",
     "print(f\"The number {num} is {result}.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter English score: \n",
+      "90\n",
+      "enter Kiswahili score: \n",
+      "90\n",
+      "enter Math score: \n",
+      "90\n",
+      "enter Science score: \n",
+      "90\n",
+      "enter Music score: \n",
+      "90\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['90', '90', '90', '90', '90']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reusable named block of codes\n",
+    "\n",
+    "def get_grade():\n",
+    "    #count = 5\n",
+    "    student_scores = []\n",
+    "    subjects = [\"English\", \"Kiswahili\", \"Math\", \"Science\", \"Music\"]\n",
+    "    #while (count < = 5):\n",
+    "    for subject in subjects:\n",
+    "        score = input(f\"enter {subject} score: \\n)\n",
+    "        student_scores.append(score)\n",
+    "        #count += 1\n",
+    "    return student_scores\n",
+    "get_grade()\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student name e.g Jane Doe: \n",
+      "Tsinjekho Shimalabandu Mapnago\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Tsinjekho Shimalabandu Mapnago'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get student name\n",
+    "def student_names():\n",
+    "    name = input(\"student name e.g Jane Doe: \\n\")\n",
+    "    return name\n",
+    "student_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter English score: 90\n",
+      "enter Kiswahili score: 98\n",
+      "enter Maths score: 89\n",
+      "enter Science score: 77\n",
+      "enter Music score: 98\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[90, 98, 89, 77, 98]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting individual scores\n",
+    "def get_scores():\n",
+    "    student_scores = []\n",
+    "    subjects = [\"English\", \"Kiswahili\", \"Maths\", \"Science\", \"Music\"]\n",
+    "    \n",
+    "    for subject in subjects:\n",
+    "        score = int(input(f\"enter {subject} score: \"))\n",
+    "        student_scores.append(score)\n",
+    "        \n",
+    "    return student_scores\n",
+    "\n",
+    "get_scores()\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter English score: \n",
+      "98\n",
+      "enter Kiswahili score: \n",
+      "98\n",
+      "enter Math score: \n",
+      "87\n",
+      "enter Science score: \n",
+      "89\n",
+      "enter Music score: \n",
+      "90\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m     total \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(student_scores)\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m total\n\u001b[1;32m---> 12\u001b[0m student_total()\n",
+      "Cell \u001b[1;32mIn[19], line 9\u001b[0m, in \u001b[0;36mstudent_total\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"get total scores\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03mReturns: \u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;124;03m    Total student scores out of 500\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      8\u001b[0m student_scores \u001b[38;5;241m=\u001b[39m get_grade()\n\u001b[1;32m----> 9\u001b[0m total \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(student_scores)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m total\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "#get student total\n",
+    "\n",
+    "def student_total():\n",
+    "    \"\"\"get total scores\n",
+    "    Returns: \n",
+    "        Total student scores out of 500\n",
+    "    \"\"\"\n",
+    "    student_scores = get_grade()\n",
+    "    total = sum(student_scores)\n",
+    "    \n",
+    "    return total\n",
+    "student_total()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student name e.g Jane Doe: \n",
+      "Joohn\n",
+      "enter English score: \n",
+      "90\n",
+      "enter Kiswahili score: \n",
+      "92\n",
+      "enter Maths score: \n",
+      "20\n",
+      "enter Science score: \n",
+      "12\n",
+      "enter Music score: \n",
+      "11\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('Joohn', [90, 92, 20, 12, 11], ['A', 'A', 'D', 'D', 'D'], 225)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def student_performance():\n",
+    "    \"\"\" get student name\n",
+    "        get student scores\n",
+    "        grade student\n",
+    "        sum student scores\n",
+    "            return: student name, scores, grade, total.\n",
+    "    \"\"\"\n",
+    "    student_name = student_names()\n",
+    "    student_score = get_scores()\n",
+    "    student_grade = []\n",
+    "    # loop through the grade\n",
+    "    for score in student_score:\n",
+    "        if (score >= 80) and (score <= 100):\n",
+    "            grade = \"A\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=70) and (score<80):\n",
+    "            grade = \"B\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=60) and (score<70):\n",
+    "            grade = \"C\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=50) and (score<60):\n",
+    "            grade = \"D\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score <50) and (score>=0):\n",
+    "            grade = \"D\"\n",
+    "            student_grade.append(grade)\n",
+    "        else:\n",
+    "            print(\"invalid grade\")\n",
+    "            student_grade.append(none)\n",
+    "            \n",
+    "    total = sum(student_score)\n",
+    "    \n",
+    "    return(student_name, student_score, student_grade, total)\n",
+    "\n",
+    "student_performance()\n",
+    "     \n",
+    "  \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student name e.g Jane Doe: \n",
+      "Shibulishikanda Mwenesi\n",
+      "enter English score: \n",
+      "83\n",
+      "enter Kiswahili score: \n",
+      "82\n",
+      "enter Maths score: \n",
+      "91\n",
+      "enter Science score: \n",
+      "57\n",
+      "enter Music score: \n",
+      "89\n",
+      "student name e.g Jane Doe: \n",
+      "Pampido Mapango\n",
+      "enter English score: \n",
+      "89\n",
+      "enter Kiswahili score: \n",
+      "89\n",
+      "enter Maths score: \n",
+      "91\n",
+      "enter Science score: \n",
+      "78\n",
+      "enter Music score: \n",
+      "77\n",
+      "student name e.g Jane Doe: \n",
+      "Tsinjekho Shimalabandu\n",
+      "enter English score: \n",
+      "99\n",
+      "enter Kiswahili score: \n",
+      "97\n",
+      "enter Maths score: \n",
+      "99\n",
+      "enter Science score: \n",
+      "91\n",
+      "enter Music score: \n",
+      "99\n",
+      "student name e.g Jane Doe: \n",
+      "Machina Makhacha\n",
+      "enter English score: \n",
+      "71\n",
+      "enter Kiswahili score: \n",
+      "65\n",
+      "enter Maths score: \n",
+      "71\n",
+      "enter Science score: \n",
+      "63\n",
+      "enter Music score: \n",
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding more Students Perfomance\n",
+    "\n",
+    "student_number = 0\n",
+    "Class_performance ={\n",
+    "    \"Name\": [],\n",
+    "    \"English\": [],\n",
+    "    \"English_grade\": [],\n",
+    "    \"Kiswahili\": [],\n",
+    "    \"Kiswahili_grade\": [],\n",
+    "    \"Maths\": [],\n",
+    "    \"Maths_grade\": [],\n",
+    "    \"Science\": [],\n",
+    "    \"Science_grade\": [],\n",
+    "    \"Music\": [],\n",
+    "    \"Music_grade\": [],\n",
+    "    \"total\": []\n",
+    "}\n",
+    "\n",
+    "while student_number <= 3:\n",
+    "    indiv_student = student_performance()\n",
+    "    indiv_student = list(indiv_student)\n",
+    "    Class_performance[\"Name\"].append(indiv_student[0]) # First name in the indiv perf list\n",
+    "    Class_performance[\"English\"].append(indiv_student[1][0]) # First subject\n",
+    "    Class_performance[\"English_grade\"].append(indiv_student[2][0])\n",
+    "    Class_performance[\"Kiswahili\"].append(indiv_student[1][1])\n",
+    "    Class_performance[\"Kiswahili_grade\"].append(indiv_student[2][1])\n",
+    "    Class_performance[\"Maths\"].append(indiv_student[1][2])\n",
+    "    Class_performance[\"Maths_grade\"].append(indiv_student[2][2])\n",
+    "    Class_performance[\"Science\"].append(indiv_student[1][3])\n",
+    "    Class_performance[\"Science_grade\"].append(indiv_student[2][3])\n",
+    "    Class_performance[\"Music\"].append(indiv_student[1][4])\n",
+    "    Class_performance[\"Music_grade\"].append(indiv_student[2][4])\n",
+    "    Class_performance[\"total\"].append(indiv_student[3])                                       \n",
+    "    student_number += 1\n",
+    "    #print(Class_performance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': ['Shibulishikanda Mwenesi', 'Pampido Mapango', 'Tsinjekho Shimalabandu', 'Machina Makhacha'], 'English': [83, 89, 99, 71], 'English_grade': ['A', 'A', 'A', 'B'], 'Kiswahili': [82, 89, 97, 65], 'Kiswahili_grade': ['A', 'A', 'A', 'C'], 'Maths': [91, 91, 99, 71], 'Maths_grade': ['A', 'A', 'A', 'B'], 'Science': [57, 78, 91, 63], 'Science_grade': ['D', 'B', 'A', 'C'], 'Music': [89, 77, 99, 78], 'Music_grade': ['A', 'B', 'A', 'B'], 'total': [402, 424, 485, 348]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Class_performance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>English</th>\n",
+       "      <th>English_grade</th>\n",
+       "      <th>Kiswahili</th>\n",
+       "      <th>Kiswahili_grade</th>\n",
+       "      <th>Maths</th>\n",
+       "      <th>Maths_grade</th>\n",
+       "      <th>Science</th>\n",
+       "      <th>Science_grade</th>\n",
+       "      <th>Music</th>\n",
+       "      <th>Music_grade</th>\n",
+       "      <th>total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Shibulishikanda Mwenesi</td>\n",
+       "      <td>83</td>\n",
+       "      <td>A</td>\n",
+       "      <td>82</td>\n",
+       "      <td>A</td>\n",
+       "      <td>91</td>\n",
+       "      <td>A</td>\n",
+       "      <td>57</td>\n",
+       "      <td>D</td>\n",
+       "      <td>89</td>\n",
+       "      <td>A</td>\n",
+       "      <td>402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Pampido Mapango</td>\n",
+       "      <td>89</td>\n",
+       "      <td>A</td>\n",
+       "      <td>89</td>\n",
+       "      <td>A</td>\n",
+       "      <td>91</td>\n",
+       "      <td>A</td>\n",
+       "      <td>78</td>\n",
+       "      <td>B</td>\n",
+       "      <td>77</td>\n",
+       "      <td>B</td>\n",
+       "      <td>424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tsinjekho Shimalabandu</td>\n",
+       "      <td>99</td>\n",
+       "      <td>A</td>\n",
+       "      <td>97</td>\n",
+       "      <td>A</td>\n",
+       "      <td>99</td>\n",
+       "      <td>A</td>\n",
+       "      <td>91</td>\n",
+       "      <td>A</td>\n",
+       "      <td>99</td>\n",
+       "      <td>A</td>\n",
+       "      <td>485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Machina Makhacha</td>\n",
+       "      <td>71</td>\n",
+       "      <td>B</td>\n",
+       "      <td>65</td>\n",
+       "      <td>C</td>\n",
+       "      <td>71</td>\n",
+       "      <td>B</td>\n",
+       "      <td>63</td>\n",
+       "      <td>C</td>\n",
+       "      <td>78</td>\n",
+       "      <td>B</td>\n",
+       "      <td>348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Name  English English_grade  Kiswahili Kiswahili_grade  \\\n",
+       "0  Shibulishikanda Mwenesi       83             A         82               A   \n",
+       "1          Pampido Mapango       89             A         89               A   \n",
+       "2   Tsinjekho Shimalabandu       99             A         97               A   \n",
+       "3         Machina Makhacha       71             B         65               C   \n",
+       "\n",
+       "   Maths Maths_grade  Science Science_grade  Music Music_grade  total  \n",
+       "0     91           A       57             D     89           A    402  \n",
+       "1     91           A       78             B     77           B    424  \n",
+       "2     99           A       91             A     99           A    485  \n",
+       "3     71           B       63             C     78           B    348  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(Class_performance)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
