--- a/Conditionals.ipynb
+++ b/Conditionals.ipynb
@@ -169,9 +169,9 @@
    "metadata": {},
    "source": [
     "# AND\n",
-    "#used to join Two or More Conditions\n",
-    "#eg students who score above 40 and below 50 attain a certain grade\n",
-    "#NOTE: AND  both conditions must be True\n"
+    "* used to join Two or More Conditions\n",
+    "* eg students who score above 40 and below 50 attain a certain grade\n",
+    "* ***NOTE*** In ***AND***  both conditions must be True\n"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "id": "a9d6c79c",
    "metadata": {},
    "source": [
-    "#Summary\n",
+    "* Summary\n",
     "|Condition 1| Condition 2| Final Condition|\n",
     "|:---------:|:----------:|:--------------:|\n",
     "|True|True|True|\n",
@@ -236,8 +236,8 @@
    "metadata": {},
    "source": [
     "# OR\n",
-    "* Just like AND its is used to join conditions\n",
-    "* At least one condition has be True\n"
+    "* Just like ***AND*** its is used to join conditions\n",
+    "* At least one condition has be ***True***\n"
    ]
   },
   {
