Another Update for Loops

--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -46,23 +46,7 @@
    "execution_count": 2,
    "id": "968b7a71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Prog loops to automate such\n",
     "for num in range(1,10):\n",
@@ -71,22 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "583d3a8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number:  0\n",
-      "Number:  1\n",
-      "Number:  2\n",
-      "Number:  3\n",
-      "Number:  4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using while loops\n",
     "count = 0\n",
@@ -107,19 +79,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "26d880d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 4, 6, 8]\n",
-      "[9, 7, 5, 3, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#List of Numbers\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
@@ -138,19 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "c070373e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "55\n",
-      "55\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sum numbers\n",
     "sum = 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + 10\n",
@@ -188,25 +142,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "d492e788",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is an example of a loop\n",
-      "We are demo'ing while loops\n",
-      "Countdown value:  5!!\n",
-      "Countdown value:  4!!\n",
-      "Countdown value:  3!!\n",
-      "Countdown value:  2!!\n",
-      "Countdown value:  1!!\n",
-      "Exit Loop and prog continues!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Demo control Flow\n",
     "print(\"This is an example of a loop\")\n",
@@ -263,22 +202,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b95faba8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kisumu\n",
-      "Kisii\n",
-      "Nyamira\n",
-      "Homa Bay\n",
-      "Migori\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Code demo\n",
     "high_courts = ['Kisumu', 'Kisii','Nyamira','Homa Bay', 'Migori', 'Kitale']\n",
@@ -302,19 +229,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "fb4eefe9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Kisumu', 'Kisii', 'Nyamira', 'Homa Bay', 'Migori', 'Kitale']\n",
-      "Homa Bay\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# list\n",
     "print(high_courts)\n",
@@ -325,23 +243,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6f4d9103",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kisumu\n",
-      "kisii\n",
-      "nyamira\n",
-      "homa bay\n",
-      "migori\n",
-      "kitale\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# looping thru list\n",
@@ -352,19 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "065d65dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Kocheli', 'Solo', 'Nyambane', 'Yussuf')\n",
-      "Kocheli\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tuple  > Similar to list but its imutable, meaning it cannot be changed\n",
     "# Syntax tuple_name = (item_1, item_2, item_3,......item_n )\n",
@@ -378,21 +274,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "9ccf8277",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kocheli\n",
-      "Solo\n",
-      "Nyambane\n",
-      "Yussuf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# looping a tuple\n",
     "\n",
@@ -402,26 +287,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "3690b5c1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "J\n",
-      "u\n",
-      "d\n",
-      "i\n",
-      "c\n",
-      "i\n",
-      "a\n",
-      "r\n",
-      "y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Iterate thru a string\n",
     "\n",
@@ -432,18 +301,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "9098cce9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['J', 'u', 'd', 'i', 'c', 'i', 'a', 'r', 'y']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Empty List to store chars\n",
     "word_chars= []\n",
@@ -455,18 +316,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "be24c4ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 5, 7, 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# range . sequence in numbers with def start and end\n",
     "\n",
@@ -481,18 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "id": "506d45c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Martin, welcome to Judiciary!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def greet_students(students_name):\n",
     "    message = f\"Hello {students_name}, welcome to Judiciary!!!\"\n",
@@ -522,22 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "c078a054",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The square of 1 = 1\n",
-      "The square of 2 = 4\n",
-      "The square of 3 = 9\n",
-      "The square of 4 = 16\n",
-      "The square of 5 = 25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example\n",
     "\n",
@@ -576,23 +409,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "7fd84680",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(6):\n",
     "    print(num)"
@@ -609,27 +429,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "842d3d9e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(30, 40):\n",
     "    print(num)"
@@ -646,27 +449,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "e4a57cfa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "6\n",
-      "9\n",
-      "12\n",
-      "15\n",
-      "18\n",
-      "21\n",
-      "24\n",
-      "27\n",
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for num in range(3, 31, 3):\n",
     "    print(num)"
@@ -674,20 +460,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "id": "5d3f9587",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Prof, welcome to Judiciary!!!\n",
-      "Hello Martin, welcome to Judiciary!!!\n",
-      "Hello Lumumba, welcome to Judiciary!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "student_names =[\"Prof\", \"Martin\", \"Lumumba\"]\n",
     "#loop body with a function\n",
@@ -697,27 +473,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "abe13458",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P\n",
-      "r\n",
-      "o\n",
-      "f\n",
-      "\n",
-      "Prof\n",
-      "Martin\n",
-      "Lumumba\n",
-      "Stan\n",
-      "Kirui\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "item_1 = student_names[0]\n",
@@ -731,48 +490,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "c554d778",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "P\n",
-      "r\n",
-      "o\n",
-      "f\n",
-      "\n",
-      "M\n",
-      "a\n",
-      "r\n",
-      "t\n",
-      "i\n",
-      "n\n",
-      "\n",
-      "L\n",
-      "u\n",
-      "m\n",
-      "u\n",
-      "m\n",
-      "b\n",
-      "a\n",
-      "\n",
-      "S\n",
-      "t\n",
-      "a\n",
-      "n\n",
-      "\n",
-      "K\n",
-      "i\n",
-      "r\n",
-      "u\n",
-      "i\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nested Loops- loop within a loop\n",
     "    \n",
@@ -785,21 +506,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "e19a1cde",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(1, 5):  \n",
     "    print('* ' * i)  \n"
@@ -807,21 +517,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 24,
    "id": "059ecf03",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# def the number of rows\n",
     "num_rows = 4\n",
@@ -852,22 +551,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "d6da6d0e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        * \n",
-      "      * * \n",
-      "    * * * \n",
-      "  * * * * \n",
-      "* * * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rows= 5 \n",
     "spaces = \" \"\n",
@@ -883,21 +570,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "f7aca8be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      * \n",
-      "    * * \n",
-      "  * * * \n",
-      "* * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rows = 4\n",
     "# looping thru each row\n",
@@ -942,22 +618,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "4126d8f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example Break 1\n",
     "for i in range(10):\n",
@@ -968,23 +632,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "f79adde7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example Break 2\n",
     "for i in range(10):\n",
@@ -995,19 +646,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "id": "bf4c3ef3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Mahamri', 'Mbaazi', 'Tea']\n",
-      "['Toast', 'Uji', 'Muhogo']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example Continue 1\n",
     "# food list\n",
@@ -1039,23 +681,7 @@
    "execution_count": 30,
    "id": "32d220bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example Continue 2\n",
     "for i in range(10):\n",
@@ -1092,25 +718,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "193e2d8e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 1:  while loop to print 1 - 5\n",
     "count = 0 # Initialization\n",
@@ -1122,21 +735,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "2ab89e10-c504-415e-b77a-6cd7f94df819",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "apple\n",
-      "banana\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 2\n",
     "fruit = [\"apple\", \"banana\", \"cherry\", \"mango\", \"pawpaw\"]\n",
@@ -1147,24 +751,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "id": "983cc9a6-ac1c-4b5c-b3ed-cabb51fcb569",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "apple\n",
-      "banana\n",
-      "cherry\n",
-      "mango\n",
-      "pawpaw\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 3\n",
     "\n",
@@ -1177,29 +769,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "770d3189-d5fc-43c4-ba82-0b0d0da52c4f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 1 * 9 = 9\n",
-      " 2 * 9 = 18\n",
-      " 3 * 9 = 27\n",
-      " 4 * 9 = 36\n",
-      " 5 * 9 = 45\n",
-      " 6 * 9 = 54\n",
-      " 7 * 9 = 63\n",
-      " 8 * 9 = 72\n",
-      " 9 * 9 = 81\n",
-      " 10 * 9 = 90\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 4 : Multiplication table of 9\n",
     "multiplier = 1\n",
@@ -1213,24 +788,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "a901b706-be63-4eef-830b-26eeff5f8c38",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* \n",
-      "* * \n",
-      "* * * \n",
-      "* * * * \n",
-      "* * * * * \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Nested while loop\n",
     "\n",
@@ -1249,24 +812,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "f82007bf-723b-4239-bf6d-3c67c0506bee",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        # \n",
-      "      # # \n",
-      "    # # # \n",
-      "  # # # # \n",
-      "# # # # # \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rows = 5\n",
     "i = 0\n",
@@ -1284,6 +835,85 @@
     "\n",
     "    print()\n",
     "    i += 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ceff5fc2",
+   "metadata": {},
+   "source": [
+    "### Revisions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "12d840fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter English score \n",
+      "90\n",
+      "Enter Kiswahili score \n",
+      "90\n",
+      "Enter Math score \n",
+      "98\n",
+      "Enter Science score \n",
+      "98\n",
+      "Enter GHC score \n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function\n",
+    "def get_grade():\n",
+    "    #count = 5\n",
+    "    student_scores = []\n",
+    "    subjects = [\"English\", \"Kiswahili\", \"Math\", \"Science\",\"GHC\"]\n",
+    "    #while (count <=5):\n",
+    "    for subject in subjects:\n",
+    "        score = int(input(f\"Enter {subject} score \\n\"))\n",
+    "        student_scores.append(score)\n",
+    "        #count += 1\n",
+    "    return student_scores\n",
+    "get_grade()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "076cc5f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grade_student():\n",
+    "    student_score = get_grade()\n",
+    "    student_grade = []\n",
+    "    # loop through the grade\n",
+    "    for score in student_score:\n",
+    "        if (score >= 80) and (score <= 100):\n",
+    "            grade = \"A\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=70) and (score<80):\n",
+    "            grade = \"B\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=60) and (score<70):\n",
+    "            grade = \"C\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score >=50) and (score<60):\n",
+    "            grade = \"D\"\n",
+    "            student_grade.append(grade)\n",
+    "        elif (score <50) and (score>=0):\n",
+    "            grade = \"D\"\n",
+    "            student_grade.append(grade)\n",
+    "        else:\n",
+    "            print(\"invalid grade\")\n",
+    "            student_grade.append(none)\n",
+    "    return(student_grade)"
    ]
   }
  ],
