--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +127,7 @@
        "11"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +321,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_message)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Making intentional errors\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(third_name)\n",
+      "Cell \u001b[1;32mIn[11], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(my_message)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Making intentional errors\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(third_name)\n",
       "\u001b[1;31mNameError\u001b[0m: name 'third_name' is not defined"
      ]
     }
@@ -387,20 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# code goes here\n",
     "#strings\n",
@@ -409,20 +405,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#boolean\n",
@@ -431,20 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#int\n",
     "type(a)"
@@ -466,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,17 +457,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is MARTIN'S Computer\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dec = \"This is \"\n",
     "name = \"Martin's \" \n",
@@ -517,19 +483,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Martin\n",
-      "MARTIN\n",
-      "martin\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(first_name.title())\n",
     "print(first_name.upper())\n",
@@ -589,17 +545,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Martin Astiba\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "full_name =f\"{first_name} {second_name}\"\n",
@@ -618,20 +566,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Martin Astiba is from Shimalabandu.\n",
-      "MARTIN ASTIBA IS FROM SHIMALABANDU.\n",
-      "martin astiba is from shimalabandu.\n",
-      "Martin Astiba Is From Shimalabandu.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paragraph_2 = \"{} {} is from Shimalabandu.\".format(first_name, second_name)\n",
     "print(paragraph_2)\n",
@@ -649,17 +586,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "My name is Martin Astiba. I am Luhya old man. Martin Astiba is from Shimalabandu..\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paragraph_3 = paragraph_1 + \" \" + paragraph_2 + \".\"\n",
     "print(paragraph_3)"
@@ -689,17 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Martin\t Astiba\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_paragraph = f\"{first_name}\\t {second_name}\"\n",
     "print(new_paragraph)"
@@ -714,18 +635,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Martin\n",
-      "Astiba\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_paragraph = f\"{first_name}\\n{second_name}\"\n",
     "print(new_paragraph)"
@@ -753,19 +665,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    This is       such a random sentence\n",
-      "This is       such a random sentence\n",
-      "This is       such a random sentence     \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paragraph_4 = \"    This is       such a random sentence     \"\n",
     "print(paragraph_4.rstrip())\n",
@@ -825,17 +727,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Ayieku Astiba, did you know that I love you so much?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lil_daughter = \"Ayieku Astiba\"\n",
     "print(f\"Hello {lil_daughter}, did you know that I love you so much?\")\n"
@@ -843,17 +737,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Ayieta Astiba, did you know that I love you so much?\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "elder_daughter = \"Ayieta Astiba\"\n",
     "print(f\"Hello {elder_daughter}, did you know that I love you so much?\")"
@@ -861,19 +747,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ayieku and ayieta astiba\n",
-      "AYIEKU AND AYIETA ASTIBA\n",
-      "Ayieku And Ayieta Astiba\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "both_daughters = \"Ayieku and Ayieta Astiba\"\n",
     "print(both_daughters.lower())\n",
@@ -883,21 +759,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'If you can't fly then run,\n",
-      " if you can't run then walk,\n",
-      " if you can't walk then crawl,\n",
-      " but whatever you do you have to keep moving forward.' \n",
-      " By 'Martin Luther King, Jr.'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "random_quote =\"'If you can't fly then run,\\n if you can't run then walk,\\n if you can't walk then crawl,\\n but whatever you do you have to keep moving forward.'\"\n",
     "author = \"'Martin Luther King, Jr.'\"  \n",
@@ -906,23 +770,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = 25\n",
+    "columns = 2\n",
+    "print(f\"the dataset has:\\n    * {rows} rows.\\n    * {columns} columns.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NUMBERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Intergers = Whole Numbers\n",
+    "a = 5000\n",
+    "type(a)\n",
+    "# Dont use commas when dealing with intergers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Floats = Numbers with decimal points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# #Operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the dataset has:\n",
-      "    * 25 rows.\n",
-      "    * 2 columns.\n"
+      "(5, 0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b= 5,000\n",
+    "print(b)\n",
+    "type(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "5\n",
+      "10\n",
+      "32\n"
      ]
     }
    ],
    "source": [
-    "rows = 25\n",
-    "columns = 2\n",
-    "print(f\"the dataset has:\\n    * {rows} rows.\\n    * {columns} columns.\")"
+    "#addition\n",
+    "print(1+1)\n",
+    "\n",
+    "#Subtraction\n",
+    "print(10-5)\n",
+    "\n",
+    "#Multiplication\n",
+    "print(2*5)\n",
+    "\n",
+    "#Power\n",
+    "print(2**5)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8\n",
+      "1\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Division\n",
+    "print(9/5) #normal division\n",
+    "\n",
+    "print(9//5) #Quotient\n",
+    "\n",
+    "print(9%5) #Remainders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.sqrt(36)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiple Assignemnts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "g,h = 15, 20\n",
+    "print(g)\n",
+    "\n",
+    "print(h)"
    ]
   }
  ],
